fixed joystick overflow over board grid

--- a/src/app/pages/not-found/snek/components/snek-grid/snek-grid.component.scss
+++ b/src/app/pages/not-found/snek/components/snek-grid/snek-grid.component.scss
@@ -4,6 +4,7 @@
 	width: max-content;
 	border: solid 2px var(--border-color);
 	border-radius: 5px;
+	user-select: none;
 	overflow: hidden;
 
 	> .snek-grid-row {
